fixed the view structure, stuck at re-render, passing state to child would like to cause a render

--- a/frontend/amrgl/src/components/controllerview/ViewWithControl.css
+++ b/frontend/amrgl/src/components/controllerview/ViewWithControl.css
@@ -10,3 +10,11 @@
     z-index: 9999;
     position: absolute;
   }
+.Scaleline{
+    position: absolute; 
+    bottom: 3%;
+    left: 50%;
+    z-index: 9999;
+    transform: translate(-50%, -50%);
+  }
+  
